# battlegrounds-rs

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/workflows/: test.yml
console/: Cargo.toml  battlegrounds_console.rs
res/: heroes.json
src/: Cargo.toml  lib.rs
src/components/: card.rs
src/enums/: card_set.rs  card_type.rs  game_tag.rs  mod.rs  race.rs
src/loaders/: card_loader.rs  card_to_entity.rs  hero_loader.rs  json_reader.rs  mod.rs
