[package]
name = "battlegrounds-rs"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Jenoghoon Rho <njhnjh02@naver.com>",
    "Sangwook Lee <vecum0814@korea.ac.kr>",
    "Seungmin Cha <dominico1225@korea.ac.kr>"
]
edition = "2018"
description = "Hearthstone:Battlegrounds simulator using Rust with some reinforcement learning"
keywords = [ "hearthstone", "battlegrounds", "simulation", "reinforcement", "rl" ]

repository = "https://github.com/utilforever/battlegrounds-rs"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
specs-derive = "0.4.1"