[package]
name = "battlegrounds-rs"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Jenoghoon Rho <njhnjh02@naver.com>",
    "Sangwook Lee <vecum0814@korea.ac.kr>",
    "Seungmin Cha <dominico1225@korea.ac.kr>"
]
edition = "2018"
description = "Hearthstone:Battlegrounds simulator using Rust with some reinforcement learning"
keywords = [ "hearthstone", "battlegrounds", "simulation", "reinforcement", "rl" ]

repository = "https://github.com/utilforever/battlegrounds-rs"

readme = "README.md"
license = "MIT"

[lib]
crate-type = [ "lib" ]

[workspace]
members = [ "console" ]

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
legion = "0.4.0"
strum = "0.23"
strum_macros = "0.23"
serde = { version = "1.0", features = ["derive"] }

