[package]
name = "battlegrounds-rs"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>", "Jenoghoon Rho <njhnjh02@naver.com>", "Sangwook Lee <vecum0814@korea.ac.kr>", "Seungmin Cha <dominico1225@korea.ac.kr>"]
description = "A cross-platform game engine written in Rust."
repository = "https://github.com/utilforever/battlegrounds-rs"
readme = "README.md"
keywords = [ "hearthstone", "battlegrounds", "simulation", "reinforcement learning" ]
license = "MIT"
edition = "2018"

[lib]
name = "battlegrounds"
path = "lib.rs"

[dependencies]